[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smol-vllm"
version = "0.1.2"
description = "From-scratch paged-attention inference engine: paged KV cache, continuous batching, preemption"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Abi Aryan" }]
keywords = ["llm", "inference", "vllm", "paged-attention", "continuous-batching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/goabiaryan/smol_vllm"
Homepage = "https://github.com/goabiaryan/smol_vllm"

[project.optional-dependencies]
dev = ["pytest"]
metrics = ["psutil"]
"tinyllama-1.1b" = ["torch", "transformers", "accelerate"]
"qwen2-0.5b" = ["torch", "transformers", "accelerate"]

[project.scripts]
smol-vllm-demo = "smol_vllm.demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smol_vllm"]
